CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(sfml-flow-designer CXX)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
FIND_PACKAGE(SFML 2 REQUIRED system window graphics network audio)
find_package(Boost REQUIRED COMPONENTS system filesystem)

ENABLE_LANGUAGE(CXX)

INCLUDE_DIRECTORIES(
  ${SFML_INCLUDE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/include/
)

FOREACH(MODULE src include include/flow)
  FILE(GLOB MODULES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.h)
  SET(SOURCES ${MODULES_SOURCES} ${SOURCES})
ENDFOREACH(MODULE)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${SOURCES} ${VERSION_FILE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SFML_LIBRARIES} ${Boost_LIBRARIES})

